src/objects/OpportunityToOrderEntryCriteria__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>Core: Error message to display to the user if the entry condition is not met</description>
        <label>Error Message</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Type__c</fullName>
        <inlineHelpText>String (Text, Picklist, Number, Currency)
Boolean (CheckBox)</inlineHelpText>
        <label>Field Type</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_Value__c</fullName>
        <description>Core: Value required in the selected field to allow the mapping to proceed</description>
        <label>Required Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>OpportunityToOrderEntryCriteria</label>
</CustomObject>